--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,6 @@ jobs:
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
-          tag: ${{ github.ref }}  # 打包的 Helm Chart 将和发布的 Git 标签关联
-          files: ./*.tgz  # 托管的 Helm Chart 文件的路径
+          files: ./hello-demo-${{ github.ref_name }}.tgz  # 托管的 Helm Chart 文件的路径
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub Token 用于身份验证
