--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,6 +27,9 @@ jobs:
         env:
           CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub Token 用于身份验证
 
+      - name: List generated files
+        run: ls ./
+        
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
