--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Helm
         uses: azure/setup-helm@v1
         with:
-          version: v3.7.0  # 安装指定版本的 Helm
+          version: v3.7.0 
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
@@ -26,14 +26,4 @@ jobs:
           charts_dir: ./charts/hello-demo  # Helm Charts 的目录
         env:
           CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub Token 用于身份验证
-
-      - name: List generated files
-        run: ls ./  && ls ./charts/
         
-      - name: Create Release
-        id: create_release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: hello-demo-${{ github.ref_name }}.tgz  # 托管的 Helm Chart 文件的路径
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub Token 用于身份验证
