--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,6 +17,12 @@ jobs:
         with:
           fetch-depth: 20
 
+      # 向gh-pages推送数据，需要设置user.name和user.email
+      - name: Configure Git
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+          
       - name: Set up Helm
         uses: azure/setup-helm@v4
 
