--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           fetch-depth: 20
 
-      # 向gh-pages推送数据，需要设置user.name和user.email
+      # 向gh-pages分支推送index.yaml更新数据，需要设置user.name和user.email
       - name: Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
@@ -26,6 +26,7 @@ jobs:
       - name: Set up Helm
         uses: azure/setup-helm@v4
 
+      # 构建helm的tgz包，并生成index.yaml，推送到默认的gh-pages分支
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         with:
